--- a/CSS/nav1.css
+++ b/CSS/nav1.css
@@ -6,11 +6,15 @@
     padding: 0px;
     background-color: white;
 
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+
+    border-bottom: 1px solid gray;
 
     display: flex;
 
     position: relative;
+
+    z-index: 99;
 }
 
 
