--- a/CSS/nav1.css
+++ b/CSS/nav1.css
@@ -15,6 +15,7 @@
     position: relative;
 
     z-index: 99;
+    transition: 0.5s ease;
 }
 
 
@@ -52,4 +53,6 @@
     margin-top: 25px;
 
     border-radius: 50%;
+
+    cursor: pointer;
 }
