--- a/Focusfile/focussection.css
+++ b/Focusfile/focussection.css
@@ -1,20 +1,20 @@
 .focussection{
 
-
-
-    height: 100%;
+    height: 95%;
     width: 75%;
     background-image: url('img.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-
-    border-radius: 10px;
-
     transition: 0.3s ease;
 
     float: left;
+
+    margin: 10px;
+    border-radius: 5px;
+
+    border: 10px solid white    ;
 
 }
 .focussection.atfullscreen{
@@ -26,6 +26,9 @@
     border-radius: 0;
     z-index: 1000;
     position: fixed;
+
+    margin: 0px;
+    border: none;
 }
 .focussection{
     color: white;
