--- a/CSS/tasksection.css
+++ b/CSS/tasksection.css
@@ -83,12 +83,12 @@
     display: flex;
     gap: 20px;
 
-
-
     padding: 0px;
     margin: 0px;
 
     height: 120%;
+
+   
 }
 .taskinfo{
     width: 85%;
@@ -102,7 +102,7 @@
 .edit img{
     cursor: pointer;
 }
-.removetask{
+.removetask, .edittask{
     padding: 0px;
     background-color: white;
     border: none;
