--- a/Focusfile/focussection.css
+++ b/Focusfile/focussection.css
@@ -1,7 +1,7 @@
 .focussection{
 
     height: 95%;
-    width: 75%;
+    width: 72%;
     background-image: url('img.jpg');
     background-size: cover;
     background-position: center;
@@ -9,26 +9,31 @@
     background-attachment: fixed;
     transition: 0.3s ease;
 
-    float: left;
 
     margin: 10px;
+    margin-left: none;
     border-radius: 5px;
+
+    position: sticky;
+    right: 0%;
 
     border: 10px solid white    ;
 
 }
 .focussection.atfullscreen{
-    position: fixed;
-    top: 0;
-    left: 0;
-     width: 100vw;
+   
+
+    width: 100vw;
     height: 100vh;
     border-radius: 0;
-    z-index: 1000;
-    position: fixed;
+    z-index: 1000; 
 
     margin: 0px;
     border: none;
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
 }
 .focussection{
     color: white;
